# Listen2Fritz

./: README.md  TODO
src/: .gitignore  Makefile.am  config.h.in  configure.ac
src/etc/: listen2fritz.conf
src/etc/init.d/: listen2fritz
src/scripts/: Makefile.am  lookup_dasoertliche.de.sh  setup-logging-mysql.sh  setup-lookup-mysql.sh
src/src/: Makefile.am  configuration.c  configuration.h  listen2fritz.c  listen2fritz.h
src/src/event/: Makefile.am  event.c  event.h
src/src/fritzboxfon/: Makefile.am  fritzboxfon.c  fritzboxfon.h  fritzboxfon_simulate.c  fritzboxfon_simulate.h
src/src/log/: Makefile.am  log.c  log.h  log_file.c  log_file.h  log_mysql.c  log_mysql.h  log_syslog.c  log_syslog.h
src/src/lookup/: Makefile.am  lookup.c  lookup.h  lookup_ldap.c  lookup_ldap.h  lookup_mysql.c  lookup_mysql.h  lookup_script.c  lookup_script.h
src/src/notify/: Makefile.am  notify.c  notify.h  notify_callback.c  notify_callback.h  notify_dreambox.c  notify_dreambox.h  notify_irc.c  notify_irc.h  notify_mail.c  notify_mail.h  notify_script.c  notify_script.h
src/src/phonenumber/: Makefile.am  phonenumber.c  phonenumber.h
src/src/util/: Makefile.am  pidfile.c  pidfile.h  util.c  util.h
